# django-line-chatbot

./: pyproject.toml
chatbots/: urls.py  views.py
core/: settings.py  urls.py
